--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,12 @@
         <div>
             Baboon Platoon: 
             <a href="{{ url_for('index') }}">Home</a>
-            <a href="{{ url_for('login') }}">Login</a>
+            <a href="{{ url_for('debug') }}">Debug</a>
+            {% if current_user.is_anonymous %}
+            <a href="{{ url_for('login') }}">Admin</a>
+            {% else %}
+            <a href="{{ url_for('logout') }}">Logout</a>
+            {% endif %}
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
