--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,7 @@
             <a href="{{ url_for('main.index') }}">Home</a>
             <a href="{{ url_for('main.raids') }}">Raids</a>
             <a href="{{ url_for('main.debug') }}">Debug</a>
+            <a href="{{ url_for('main.signups') }}">Sign-Ups</a>
             {% if current_user.is_anonymous %}
             <a href="{{ url_for('main.login') }}">Admin</a>
             {% else %}
