fetch and populate db, index.html improvements

--- a/app/templates/players.html
+++ b/app/templates/players.html
@@ -10,7 +10,7 @@
     </tr>
     {% for player in players %}
         <tr>
-            <td>{{ player.title }}</td>
+            <td>{{ player.name }}</td>
             <td>{{ player.rank }}</td>
             <td>{{ player.bp }}</td>
         </tr>
