--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Materialize CSS -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
         <!-- jQuery -->
@@ -9,6 +11,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <!-- Google Material icons -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!-- Custom styles...-->
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
         {% if title %}
         <title>{{ title }} - Baboon Platoon</title>
         {% else %}
@@ -24,7 +28,6 @@
                     <li><a href="{{ url_for('main.raids') }}">Raids</a></li>
                     <li><a href="{{ url_for('main.players') }}">Players</a></li>
                     <li><a href="{{ url_for('main.debug') }}">Debug</a></li>
-                    <li><a href="{{ url_for('main.signups') }}">Sign-Ups</a></li>
                     {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('main.login') }}">Admin</a></li>
                     {% else %}
@@ -42,7 +45,17 @@
         </ul>
         {% endif %}
         {% endwith %}
-        {% block content %}{% endblock %}
+        <div class="row">
+            <div class="col l3">
+
+            </div>
+            <div class="col s12 l6">
+                {% block content %}{% endblock %}
+            </div>
+            <div class="col l3">
+
+            </div>
+        </div>
 
         {{ moment.include_moment() }}
         {{ moment.locale(auto_detect=True) }}  
