--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,18 +2,104 @@
 
 {% block content %}
 
-<div class="row">
-    {% for raid in raids_upcoming %}
+
+{% for raid in raids_upcoming %}
     <div class="col s12">
         <div class="card">
             <div class="card-content">
                 <span class="card-title">{{raid.title}}</span>
                 <p><strong> Datum: {{ moment(raid.timestamp).format('LLL') }} </strong></p>
                 <p>{{raid.description}}</p>
+                <div class="row">
+                    <div class="col s12">
+                        <table class="centered">
+                            <thead>
+                                <tr><th>Tanks</th></tr>
+                            </thead>
+                            <tbody>
+                                {% for raid_player in raid.players if raid_player.role == 'Tank' %}
+                                    <tr>
+                                        {% include '_player.html' %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col s12">
+                        <table class="centered">
+                            <thead>
+                                <tr><th>Healers</th></tr>
+                            </thead>
+                            <tbody>
+                                {% for raid_player in raid.players if raid_player.role == 'Healer' %}
+                                    <tr>
+                                        {% include '_player.html' %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col s12">
+                        <table class="centered">
+                            <thead>
+                                <tr><th>Melee</th></tr>
+                            </thead>
+                            <tbody>
+                                {% for raid_player in raid.players if raid_player.role == 'Melee' %}
+                                    <tr>
+                                        {% include '_player.html' %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col s12">
+                        <table class="centered">
+                            <thead>
+                                <tr><th>Ranged</th></tr>
+                            </thead>
+                            <tbody>
+                                {% for raid_player in raid.players if raid_player.role == 'Ranged' %}
+                                    <tr>
+                                        {% include '_player.html' %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col s12">
+                        <table class="centered">
+                            <thead>
+                                <tr><th>Late/Tentative/Absent</th></tr>
+                            </thead>
+                            <tbody>
+                                {% for raid_player in raid.players if raid_player.role == 'Late' or raid_player.role == 'Tentative' or raid_player.role == 'Absent' or raid_player.role == 'Benched' %}
+                                    <tr>
+                                        {% include '_player.html' %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col s12">
+                        <table class="centered">
+                            <thead>
+                                <tr><th>Benched</th></tr>
+                            </thead>
+                            <tbody>
+                                {% for raid_player in raid.players if raid_player.role == 'BP' %}
+                                    <tr class="ranged">
+                                        {% include '_player.html' %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    {% else %}
+{% else %}
     <div class="col s12">
         <div class="card">
             <div class="card-content">
@@ -22,6 +108,6 @@
             </div>
         </div>
     </div>
-    {% endfor %}
-</div>
+{% endfor %}
+
 {% endblock %}
