--- a/app/templates/raids.html
+++ b/app/templates/raids.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<table class="responsive-table highlight">
+<table class="highlight">
     <tr>
         <th>Titel</th>
         <th>Typ</th>
