--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,12 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Materialize CSS -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
+
         <!-- jQuery -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <!-- Materialize JS -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <!-- Materialize CSS -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
         <!-- Google Material icons -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!-- Custom styles...-->
@@ -22,12 +21,13 @@
     <body>
         <nav>
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Baboon Platoon</a>
+                <a href="{{ url_for('main.index') }}" class="brand-logo">Baboon Platoon</a>
+                <a href="#" data-target="mobile-menu" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('main.index') }}">Home</a></li>
                     <li><a href="{{ url_for('main.raids') }}">Raids</a></li>
                     <li><a href="{{ url_for('main.players') }}">Players</a></li>
-                    <li><a href="{{ url_for('main.debug') }}">Debug</a></li>
+                    <!-- <li><a href="{{ url_for('main.debug') }}">Debug</a></li> -->
                     {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('main.login') }}">Admin</a></li>
                     {% else %}
@@ -36,6 +36,20 @@
                 </ul>
             </div>
         </nav>
+        
+        <!-- Side Navigation for Mobile -->
+        <ul class="sidenav" id="mobile-menu">
+            <li><a href="{{ url_for('main.index') }}">Home</a></li>
+            <li><a href="{{ url_for('main.raids') }}">Raids</a></li>
+            <li><a href="{{ url_for('main.players') }}">Players</a></li>
+            <li><a href="{{ url_for('main.debug') }}">Debug</a></li>
+            {% if current_user.is_anonymous %}
+            <li><a href="{{ url_for('main.login') }}">Admin</a></li>
+            {% else %}
+            <li><a href="{{ url_for('main.logout') }}">Logout</a></li>
+            {% endif %}
+        </ul>
+
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         <ul>
@@ -61,3 +75,13 @@
         {{ moment.locale(auto_detect=True) }}  
     </body>
 </html>
+
+<!-- Materialize JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('.sidenav');
+        var instances = M.Sidenav.init(elems);
+    });
+</script>
