--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,13 +8,16 @@
         <div class="card">
             <div class="card-content">
                 <span class="card-title">{{raid.title}}</span>
-                <p><strong> Datum: {{ moment(raid.timestamp).format('LLL') }} </strong></p>
-                <p>{{raid.description}}</p>
+                <div>
+                    <p><strong> Datum: {{ moment(raid.timestamp).format('LLL') }} </strong></p>
+                    <p>{{raid.description}}</p>
+                </div>
+                <br>
                 <div class="row">
                     <div class="col s12">
                         <table class="centered">
                             <thead>
-                                <tr><th>Tanks</th></tr>
+                                <tr><th class="highlight-tank">Tanks</th></tr>
                             </thead>
                             <tbody>
                                 {% for raid_player in raid.players if raid_player.role == 'Tank' %}
@@ -28,7 +31,7 @@
                     <div class="col s12">
                         <table class="centered">
                             <thead>
-                                <tr><th>Healers</th></tr>
+                                <tr><th class="highlight-healer">Healers</th></tr>
                             </thead>
                             <tbody>
                                 {% for raid_player in raid.players if raid_player.role == 'Healer' %}
@@ -42,10 +45,10 @@
                     <div class="col s12">
                         <table class="centered">
                             <thead>
-                                <tr><th>Melee</th></tr>
+                                <tr><th class="highlight-melee">DPS</th></tr>
                             </thead>
                             <tbody>
-                                {% for raid_player in raid.players if raid_player.role == 'Melee' %}
+                                {% for raid_player in raid.players if raid_player.role == 'Melee' or raid_player.role == 'Ranged' %}
                                     <tr>
                                         {% include '_player.html' %}
                                     </tr>
@@ -56,35 +59,7 @@
                     <div class="col s12">
                         <table class="centered">
                             <thead>
-                                <tr><th>Ranged</th></tr>
-                            </thead>
-                            <tbody>
-                                {% for raid_player in raid.players if raid_player.role == 'Ranged' %}
-                                    <tr>
-                                        {% include '_player.html' %}
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="col s12">
-                        <table class="centered">
-                            <thead>
-                                <tr><th>Late/Tentative/Absent</th></tr>
-                            </thead>
-                            <tbody>
-                                {% for raid_player in raid.players if raid_player.role == 'Late' or raid_player.role == 'Tentative' or raid_player.role == 'Absent' or raid_player.role == 'Benched' %}
-                                    <tr>
-                                        {% include '_player.html' %}
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="col s12">
-                        <table class="centered">
-                            <thead>
-                                <tr><th>Benched</th></tr>
+                                <tr><th class="highlight-benched">Benched</th></tr>
                             </thead>
                             <tbody>
                                 {% for raid_player in raid.players if raid_player.role == 'BP' %}
