a lot of updates regarding authentication

--- a/app/templates/admin_raids.html
+++ b/app/templates/admin_raids.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<a href="{{ url_for('main.fetch_raids') }}">Fetch Raids Manually</a>
+
 <table class="highlight">
     <tr>
         <th>Titel</th>
