--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,13 +25,14 @@
                 <a href="#" data-target="mobile-menu" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('main.index') }}">Home</a></li>
-                    <li><a href="{{ url_for('main.raids') }}">Raids</a></li>
-                    <li><a href="{{ url_for('main.players') }}">Players</a></li>
-                    <!-- <li><a href="{{ url_for('main.debug') }}">Debug</a></li> -->
-                    {% if current_user.is_anonymous %}
-                    <li><a href="{{ url_for('main.login') }}">Admin</a></li>
+                    {% if current_user.is_authenticated %}
+                        <li><a href="{{ url_for('main.admin_raids') }}">Raids</a></li>
+                        <li><a href="{{ url_for('main.admin_players') }}">Players</a></li>
+                        <li><a href="{{ url_for('main.logout') }}">Logout</a></li>
                     {% else %}
-                    <li><a href="{{ url_for('main.logout') }}">Logout</a></li>
+                        <li><a href="{{ url_for('main.raids') }}">Raids</a></li>
+                        <li><a href="{{ url_for('main.players') }}">Players</a></li>
+                        <li><a href="{{ url_for('main.login') }}">Admin</a></li>
                     {% endif %}
                 </ul>
             </div>
@@ -40,13 +41,14 @@
         <!-- Side Navigation for Mobile -->
         <ul class="sidenav" id="mobile-menu">
             <li><a href="{{ url_for('main.index') }}">Home</a></li>
-            <li><a href="{{ url_for('main.raids') }}">Raids</a></li>
-            <li><a href="{{ url_for('main.players') }}">Players</a></li>
-            <li><a href="{{ url_for('main.debug') }}">Debug</a></li>
-            {% if current_user.is_anonymous %}
-            <li><a href="{{ url_for('main.login') }}">Admin</a></li>
+            {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('main.admin_raids') }}">Raids</a></li>
+                <li><a href="{{ url_for('main.admin_players') }}">Players</a></li>
+                <li><a href="{{ url_for('main.logout') }}">Logout</a></li>
             {% else %}
-            <li><a href="{{ url_for('main.logout') }}">Logout</a></li>
+                <li><a href="{{ url_for('main.raids') }}">Raids</a></li>
+                <li><a href="{{ url_for('main.players') }}">Players</a></li>
+                <li><a href="{{ url_for('main.login') }}">Admin</a></li>
             {% endif %}
         </ul>
 
