--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>File Not Found</h1>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+    <h1>404 - Page not found</h1>
+    <img src="{{ url_for('static', filename='images/cook_baboon.png') }}">
+    <p><a href="{{ url_for('main.index') }}">Back</a></p>
 {% endblock %}
