--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,18 +2,79 @@
 
 {% block content %}
 
-<div class="row">
-    {% for raid in raids_upcoming %}
+
+{% for raid in raids_upcoming %}
     <div class="col s12">
         <div class="card">
             <div class="card-content">
                 <span class="card-title">{{raid.title}}</span>
-                <p><strong> Datum: {{ moment(raid.timestamp).format('LLL') }} </strong></p>
-                <p>{{raid.description}}</p>
+                <div>
+                    <p><strong> Datum: {{ moment(raid.timestamp).format('LLL') }} </strong></p>
+                    <p>{{raid.description}}</p>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col s12">
+                        <table class="centered">
+                            <thead>
+                                <tr><th class="highlight-tank">Tanks</th></tr>
+                            </thead>
+                            <tbody>
+                                {% for raid_player in raid.players if raid_player.role == 'Tank' %}
+                                    <tr>
+                                        {% include '_player.html' %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col s12">
+                        <table class="centered">
+                            <thead>
+                                <tr><th class="highlight-healer">Healers</th></tr>
+                            </thead>
+                            <tbody>
+                                {% for raid_player in raid.players if raid_player.role == 'Healer' %}
+                                    <tr>
+                                        {% include '_player.html' %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col s12">
+                        <table class="centered">
+                            <thead>
+                                <tr><th class="highlight-melee">DPS</th></tr>
+                            </thead>
+                            <tbody>
+                                {% for raid_player in raid.players if raid_player.role == 'Melee' or raid_player.role == 'Ranged' %}
+                                    <tr>
+                                        {% include '_player.html' %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col s12">
+                        <table class="centered">
+                            <thead>
+                                <tr><th class="highlight-benched">Bench</th></tr>
+                            </thead>
+                            <tbody>
+                                {% for raid_player in raid.players if raid_player.role == 'Baboon_Bench' %}
+                                    <tr class="ranged">
+                                        {% include '_player.html' %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    {% else %}
+{% else %}
     <div class="col s12">
         <div class="card">
             <div class="card-content">
@@ -22,6 +83,6 @@
             </div>
         </div>
     </div>
-    {% endfor %}
-</div>
+{% endfor %}
+
 {% endblock %}
