--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,6 +18,8 @@
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>{{ form.submit() }}</p>
+        <p>
+            <button class="btn waves-effect waves-light" type="submit">Sign In</button>
+        </p>
     </form>
 {% endblock %}
